[dyad] wrote 3 file(s)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Organiza Aí - Gestão Financeira</title>
+    <title>DinDin - Gestão Financeira</title>
     <meta name="description" content="Sistema completo de gestão financeira pessoal e empresarial. Controle suas finanças com dashboards intuitivos, relatórios automáticos e análise inteligente de gastos.">
-    <meta name="author" content="Organiza Aí" />
+    <meta name="author" content="DinDin" />
 
     
     
@@ -13,10 +13,10 @@
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/8k0RA4lujZdklmTW2qgOByQUK7o2/social-images/social-1763491390812-Logo Clean e Moderno da Organiza Aí.png">
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@OrganizaAi" />
+    <meta name="twitter:site" content="@DinDinApp" />
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/8k0RA4lujZdklmTW2qgOByQUK7o2/social-images/social-1763491390812-Logo Clean e Moderno da Organiza Aí.png">
-    <meta property="og:title" content="Organiza Aí - Gestão Financeira">
-  <meta name="twitter:title" content="Organiza Aí - Gestão Financeira">
+    <meta property="og:title" content="DinDin - Gestão Financeira">
+  <meta name="twitter:title" content="DinDin - Gestão Financeira">
   <meta property="og:description" content="Sistema completo de gestão financeira pessoal e empresarial. Controle suas finanças com dashboards intuitivos, relatórios automáticos e análise inteligente de gastos.">
   <meta name="twitter:description" content="Sistema completo de gestão financeira pessoal e empresarial. Controle suas finanças com dashboards intuitivos, relatórios automáticos e análise inteligente de gastos.">
 </head>
